[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/themes/new_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/local/game.gd" type="Script" id=2]
[ext_resource path="res://scripts/local/BGrid.gd" type="Script" id=3]
[ext_resource path="res://assets/styleBox/header.tres" type="StyleBox" id=4]

[node name="MC" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.24493
margin_bottom = -2.24493
theme = ExtResource( 1 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VB" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
custom_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="VB"]
margin_right = 984.0
margin_bottom = 44.0

[node name="Pause" type="Button" parent="VB/Header"]
margin_right = 110.0
margin_bottom = 44.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "|| Pause"

[node name="StageLabel" type="Label" parent="VB/Header"]
margin_left = 114.0
margin_top = 2.0
margin_right = 866.0
margin_bottom = 41.0
size_flags_horizontal = 3
align = 1

[node name="Time" type="Label" parent="VB/Header"]
margin_left = 870.0
margin_top = 2.0
margin_right = 984.0
margin_bottom = 41.0
text = "00:00:00"
align = 2

[node name="MC" type="MarginContainer" parent="VB"]
margin_top = 64.0
margin_right = 984.0
margin_bottom = 368.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="VB/MC"]
margin_right = 984.0
margin_bottom = 304.0
custom_styles/panel = ExtResource( 4 )

[node name="Img" type="TextureRect" parent="VB/MC"]
margin_right = 984.0
margin_bottom = 304.0
expand = true
stretch_mode = 6

[node name="HB" type="HBoxContainer" parent="VB"]
margin_top = 388.0
margin_right = 984.0
margin_bottom = 388.0
custom_constants/separation = 10
alignment = 1

[node name="Keys" type="GridContainer" parent="VB"]
visible = false
margin_top = 194.0
margin_right = 984.0
margin_bottom = 388.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 3

[node name="B1" type="Button" parent="VB/Keys"]
margin_right = 321.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1"
script = ExtResource( 3 )

[node name="B2" type="Button" parent="VB/Keys"]
margin_left = 331.0
margin_right = 652.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2"
script = ExtResource( 3 )

[node name="B3" type="Button" parent="VB/Keys"]
margin_left = 662.0
margin_right = 983.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3"
script = ExtResource( 3 )

[node name="B4" type="Button" parent="VB/Keys"]
margin_top = 68.0
margin_right = 321.0
margin_bottom = 126.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4"
script = ExtResource( 3 )

[node name="B5" type="Button" parent="VB/Keys"]
margin_left = 331.0
margin_top = 68.0
margin_right = 652.0
margin_bottom = 126.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "5"
script = ExtResource( 3 )

[node name="B6" type="Button" parent="VB/Keys"]
margin_left = 662.0
margin_top = 68.0
margin_right = 983.0
margin_bottom = 126.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "6"
script = ExtResource( 3 )

[node name="B7" type="Button" parent="VB/Keys"]
margin_top = 136.0
margin_right = 321.0
margin_bottom = 194.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "7"
script = ExtResource( 3 )

[node name="B8" type="Button" parent="VB/Keys"]
margin_left = 331.0
margin_top = 136.0
margin_right = 652.0
margin_bottom = 194.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "8"
script = ExtResource( 3 )

[node name="B9" type="Button" parent="VB/Keys"]
margin_left = 662.0
margin_top = 136.0
margin_right = 983.0
margin_bottom = 194.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "9"
script = ExtResource( 3 )

[node name="Keyboard" type="VBoxContainer" parent="VB"]
margin_top = 408.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Row1" type="HBoxContainer" parent="VB/Keyboard"]
margin_right = 984.0
margin_bottom = 44.0
custom_constants/separation = 10

[node name="Q" type="Button" parent="VB/Keyboard/Row1"]
margin_right = 89.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Q"
script = ExtResource( 3 )

[node name="W" type="Button" parent="VB/Keyboard/Row1"]
margin_left = 99.0
margin_right = 188.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "W"
script = ExtResource( 3 )

[node name="E" type="Button" parent="VB/Keyboard/Row1"]
margin_left = 198.0
margin_right = 288.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "E"
script = ExtResource( 3 )

[node name="R" type="Button" parent="VB/Keyboard/Row1"]
margin_left = 298.0
margin_right = 387.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "R"
script = ExtResource( 3 )

[node name="T" type="Button" parent="VB/Keyboard/Row1"]
margin_left = 397.0
margin_right = 487.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "T"
script = ExtResource( 3 )

[node name="Y" type="Button" parent="VB/Keyboard/Row1"]
margin_left = 497.0
margin_right = 586.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Y"
script = ExtResource( 3 )

[node name="U" type="Button" parent="VB/Keyboard/Row1"]
margin_left = 596.0
margin_right = 685.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "U"
script = ExtResource( 3 )

[node name="I" type="Button" parent="VB/Keyboard/Row1"]
margin_left = 695.0
margin_right = 785.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "I"
script = ExtResource( 3 )

[node name="O" type="Button" parent="VB/Keyboard/Row1"]
margin_left = 795.0
margin_right = 884.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "O"
script = ExtResource( 3 )

[node name="P" type="Button" parent="VB/Keyboard/Row1"]
margin_left = 894.0
margin_right = 984.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "P"
script = ExtResource( 3 )

[node name="Row2" type="HBoxContainer" parent="VB/Keyboard"]
margin_top = 54.0
margin_right = 984.0
margin_bottom = 98.0
size_flags_horizontal = 5
custom_constants/separation = 10

[node name="A" type="Button" parent="VB/Keyboard/Row2"]
margin_right = 100.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "A"
script = ExtResource( 3 )

[node name="S" type="Button" parent="VB/Keyboard/Row2"]
margin_left = 110.0
margin_right = 210.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "S"
script = ExtResource( 3 )

[node name="D" type="Button" parent="VB/Keyboard/Row2"]
margin_left = 220.0
margin_right = 321.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "D"
script = ExtResource( 3 )

[node name="F" type="Button" parent="VB/Keyboard/Row2"]
margin_left = 331.0
margin_right = 431.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "F"
script = ExtResource( 3 )

[node name="G" type="Button" parent="VB/Keyboard/Row2"]
margin_left = 441.0
margin_right = 542.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "G"
script = ExtResource( 3 )

[node name="H" type="Button" parent="VB/Keyboard/Row2"]
margin_left = 552.0
margin_right = 652.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "H"
script = ExtResource( 3 )

[node name="J" type="Button" parent="VB/Keyboard/Row2"]
margin_left = 662.0
margin_right = 763.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "J"
script = ExtResource( 3 )

[node name="K" type="Button" parent="VB/Keyboard/Row2"]
margin_left = 773.0
margin_right = 873.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "K"
script = ExtResource( 3 )

[node name="L" type="Button" parent="VB/Keyboard/Row2"]
margin_left = 883.0
margin_right = 984.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "L"
script = ExtResource( 3 )

[node name="Row3" type="HBoxContainer" parent="VB/Keyboard"]
margin_top = 108.0
margin_right = 984.0
margin_bottom = 152.0
custom_constants/separation = 10

[node name="Z" type="Button" parent="VB/Keyboard/Row3"]
margin_right = 132.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Z"
script = ExtResource( 3 )

[node name="X" type="Button" parent="VB/Keyboard/Row3"]
margin_left = 142.0
margin_right = 274.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "X"
script = ExtResource( 3 )

[node name="C" type="Button" parent="VB/Keyboard/Row3"]
margin_left = 284.0
margin_right = 416.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "C"
script = ExtResource( 3 )

[node name="V" type="Button" parent="VB/Keyboard/Row3"]
margin_left = 426.0
margin_right = 558.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "V"
script = ExtResource( 3 )

[node name="B" type="Button" parent="VB/Keyboard/Row3"]
margin_left = 568.0
margin_right = 700.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "B"
script = ExtResource( 3 )

[node name="N" type="Button" parent="VB/Keyboard/Row3"]
margin_left = 710.0
margin_right = 842.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "N"
script = ExtResource( 3 )

[node name="M" type="Button" parent="VB/Keyboard/Row3"]
margin_left = 852.0
margin_right = 984.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "M"
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
autostart = true
[connection signal="pressed" from="VB/Header/Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="VB/Keys/B1" to="VB/Keys/B1" method="buttonPress"]
[connection signal="pressed" from="VB/Keys/B2" to="VB/Keys/B2" method="buttonPress"]
[connection signal="pressed" from="VB/Keys/B3" to="VB/Keys/B3" method="buttonPress"]
[connection signal="pressed" from="VB/Keys/B4" to="VB/Keys/B4" method="buttonPress"]
[connection signal="pressed" from="VB/Keys/B5" to="VB/Keys/B5" method="buttonPress"]
[connection signal="pressed" from="VB/Keys/B6" to="VB/Keys/B6" method="buttonPress"]
[connection signal="pressed" from="VB/Keys/B7" to="VB/Keys/B7" method="buttonPress"]
[connection signal="pressed" from="VB/Keys/B8" to="VB/Keys/B8" method="buttonPress"]
[connection signal="pressed" from="VB/Keys/B9" to="VB/Keys/B9" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row1/Q" to="VB/Keyboard/Row1/Q" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row1/W" to="VB/Keyboard/Row1/W" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row1/E" to="VB/Keyboard/Row1/E" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row1/R" to="VB/Keyboard/Row1/R" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row1/T" to="VB/Keyboard/Row1/T" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row1/Y" to="VB/Keyboard/Row1/Y" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row1/U" to="VB/Keyboard/Row1/U" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row1/I" to="VB/Keyboard/Row1/I" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row1/O" to="VB/Keyboard/Row1/O" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row1/P" to="VB/Keyboard/Row1/P" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row2/A" to="VB/Keyboard/Row2/A" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row2/S" to="VB/Keyboard/Row2/S" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row2/D" to="VB/Keyboard/Row2/D" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row2/F" to="VB/Keyboard/Row2/F" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row2/G" to="VB/Keyboard/Row2/G" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row2/H" to="VB/Keyboard/Row2/H" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row2/J" to="VB/Keyboard/Row2/J" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row2/K" to="VB/Keyboard/Row2/K" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row2/L" to="VB/Keyboard/Row2/L" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row3/Z" to="VB/Keyboard/Row3/Z" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row3/X" to="VB/Keyboard/Row3/X" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row3/C" to="VB/Keyboard/Row3/C" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row3/V" to="VB/Keyboard/Row3/V" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row3/B" to="VB/Keyboard/Row3/B" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row3/N" to="VB/Keyboard/Row3/N" method="buttonPress"]
[connection signal="pressed" from="VB/Keyboard/Row3/M" to="VB/Keyboard/Row3/M" method="buttonPress"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
